--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,19 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.2.11.v20150529</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>9.2.11.v20150529</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -191,6 +204,15 @@
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <warName>jetty-ssl-example</warName>
+                </configuration>
+            </plugin>
             <!-- Java compiler - Java version 11 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
