--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <version>5.1.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+
 
 
         <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlets -->
